--- a/lottietests/index.html
+++ b/lottietests/index.html
@@ -27,6 +27,9 @@
         .svg-wrapper svg{
             filter: url(#displacementFilter);
         }
+        #flowerstroke {
+            stroke-dasharray: 10;
+        }
     </style>
 </head>
 <body>
@@ -43,17 +46,30 @@
                 <feDisplacementMap
                     in2="turbulence"
                     in="SourceGraphic"
-                    scale="15"
+                    scale="5"
                     xChannelSelector="R"
                     yChannelSelector="G" />
             </filter>
         </defs>
-        <g filter="url(#displacementFilter)">
+        <g>
             <foreignObject width="800" height="800">
                 <div id="lottie-container"></div>
             </foreignObject>
         </g>
-        
+    </svg>  
+    <svg class="svg-wrapper">
+        <g>
+            <foreignObject width="800" height="800">
+                <div id="lottie-container-2"></div>
+            </foreignObject>
+        </g>
+    </svg>
+    <svg class="svg-wrapper">
+        <g>
+            <foreignObject width="800" height="800">
+                <div id="lottie-container-3"></div>
+            </foreignObject>
+        </g>
     </svg>
 
     <p>This is a simple HTML page.</p>
@@ -65,6 +81,22 @@
             renderer: 'svg',
             loop: true,
             autoplay: true,
+            path: 'expressions.json'
+        });
+
+        lottie.loadAnimation({
+            container: document.getElementById('lottie-container-2'),
+            renderer: 'svg',
+            loop: true,
+            autoplay: false,
+            path: 'anim.json'
+        });
+
+        lottie.loadAnimation({
+            container: document.getElementById('lottie-container-3'),
+            renderer: 'svg',
+            loop: true,
+            autoplay: false,
             path: 'anim.json'
         });
     </script>
