Update Lottie animation configuration and filter scale in index.html for enhanced visual effects.

--- a/lottietests/index.html
+++ b/lottietests/index.html
@@ -60,7 +60,7 @@
                 <feDisplacementMap 
                     in2="turbulence"
                     in="SourceGraphic"
-                    scale="8" 
+                    scale="12" 
                     xChannelSelector="R" 
                     yChannelSelector="G" />
             </filter>
@@ -96,7 +96,7 @@
             renderer: 'svg',
             loop: true,
             autoplay: true,
-            path: 'expressions.json'
+            path: 'anim3.json'
         });
 
         lottie.loadAnimation({
