Enable autoplay for Lottie animations in index.html to enhance user experience.

--- a/lottietests/index.html
+++ b/lottietests/index.html
@@ -103,7 +103,7 @@
             container: document.getElementById('lottie-container-2'),
             renderer: 'svg',
             loop: true,
-            autoplay: false,
+            autoplay: true,
             path: 'anim.json'
         });
 
