--- a/lottietests/index.html
+++ b/lottietests/index.html
@@ -24,8 +24,9 @@
             height: 800px;
         }
 
-        .svg-wrapper svg{
+        .svg-wrapper svg {
             filter: url(#fractalNoiseFilter);
+            will-change: transform;
         }
         #flowerstroke {
             stroke-dasharray: 10;
@@ -53,14 +54,14 @@
             <filter id="fractalNoiseFilter">
                 <feTurbulence 
                     type="fractalNoise" 
-                    baseFrequency="0.013888888992369175 0.013888888992369175" 
+                    baseFrequency="0.014 0.014" 
                     numOctaves="3" 
                     seed="9232"
                     result="turbulence"/>
                 <feDisplacementMap 
                     in2="turbulence"
                     in="SourceGraphic"
-                    scale="4" 
+                    scale="10" 
                     xChannelSelector="R" 
                     yChannelSelector="G" />
             </filter>
